2015-04-03  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/cockroach.c (main): Invoke syscall_names_initialize.
	* src/Makefile.am (syscall_names.c.inc): Generate.
	* src/syscall_names.c: New file.

	* src/roach.h (roach_context_s): Make entering_sc an hashtable.
	(roach_get_last_sc): New function.
	* src/roach.c (roach_wait): Register new child process.
	(set_last_sc): New function.
	(roach_get_last_sc): Likewise.
	(set_entering_sc): Likewise.
	(roach_entering_sc_p): Likewise.
	(insert_pid): Likewise.
	(roach_rot_process): Register the first process.

	* src/Makefile.am (cockroach_LDADD): Fix inclusion order.
	* bootstrap.conf (gnulib_modules): Add "hash".
	* TODO: update.

	* bootstrap.conf (gnulib_modules): Sort list.

	* src/roach.c (roach_wait): Do not try to wake up an exited process.

2015-04-02  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/roach.h (roach_context_s): Add Comment.

	* src/roach.h (roach_context_s): Add root_pid.  Rename pid to
	current_pid.

	* src/roach.c (roach_ctx_get_pid): New function.
	* src/arch/linux_generic.c (roach_set_sc): Use roach_ctx_get_pid
	instead of accessing ctx->pid everywhere.

	* src/roach.c (roach_wait): Simplify some code.

	* TODO: TLS won't be useful, as there is only one process running,
	make it clear.

	* src/arch/linux_generic.c (roach_syscall_inhibit): Remove magic
	number and use __NR_getpid.

	* src/roach.c (roach_wait): Pass the pid of the stopped process to
	the hook function.
	* src/roach.h: Add argument "pid" to roach_syscall_inhibit.
	* src/arch/linux_generic.c (roach_syscall_inhibit): Add argument "pid".
	* src/plugins/fail_mem/fail_mem.c (fail_mem): Likewise.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Renamed from TODO.org
	Formatting fixed.

2015-04-01  Giuseppe Scrivano  <gscrivan@redhat.com>

	* TODO.org: Add new file.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add module readdir.
	(gnulib_modules): Likewise.
